--- a/Blog-Fianl-Exam/package.json
+++ b/Blog-Fianl-Exam/package.json
@@ -7,7 +7,6 @@
   },
   "author": "",
   "license": "ISC",
-  "description": "",
   "dependencies": {
     "bcrypt": "^6.0.0",
     "dotenv": "^17.2.0",
@@ -16,5 +15,7 @@
     "mongoose": "^8.16.4",
     "multer": "^2.0.2",
     "nodemon": "^3.1.10"
-  }
+  },
+  "devDependencies": {},
+  "description": ""
 }
