--- a/movie and rating api project/package.json
+++ b/movie and rating api project/package.json
@@ -1,9 +1,8 @@
 {
-  "name": "blog-project",
+  "name": "movie-and-rating-api-project",
   "version": "1.0.0",
-  "main": "server.js",
+  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon server.js"
   },
   "author": "",
@@ -11,12 +10,9 @@
   "description": "",
   "dependencies": {
     "bcrypt": "^6.0.0",
-    "body-parser": "^2.2.0",
-    "cookie-parser": "^1.4.7",
-    "dotenv": "^17.2.0",
-    "ejs": "^3.1.10",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
+    "moment": "^2.30.1",
     "mongoose": "^8.16.4",
     "multer": "^2.0.2",
     "nodemon": "^3.1.10"
